# profi2021_bachelor_solution

./: CMakeLists.txt  README.md  package.xml
launch/: solution.launch
scripts/: simple_move.py
src/: simple_move.cpp
